--- a/index.html
+++ b/index.html
@@ -1,128 +1,153 @@
-<!DOCTYPE html><html lang="pt-BR">
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NeonCore RPG</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>NeonCore - RPG Cyberpunk</title>
   <style>
-    * {
+    body {
       margin: 0;
-      padding: 0;
-      box-sizing: border-box;
       font-family: 'Orbitron', sans-serif;
-    }body {
-  background: url('/mnt/data/file-8GGoidoc76LF1mBCXpF3w4') no-repeat center center fixed;
-  background-size: cover;
-  color: #00ffff;
-  overflow-x: hidden;
-}
-
-header {
-  display: flex;
-  justify-content: center;
-  gap: 2rem;
-  padding: 1rem;
-  background: rgba(0, 0, 0, 0.7);
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-}
-
-header a {
-  text-decoration: none;
-  color: #00ffff;
-  font-size: 1.2rem;
-  transition: color 0.3s ease;
-}
-
-header a:hover {
-  color: #ff00ff;
-}
-
-section {
-  padding: 2rem;
-  background-color: rgba(0, 0, 0, 0.7);
-  margin: 2rem;
-  border-radius: 12px;
-  backdrop-filter: blur(5px);
-}
-
-h1, h2, h3 {
-  color: #ff00ff;
-  margin-bottom: 1rem;
-}
-
-img.personagem {
-  width: 100%;
-  max-width: 300px;
-  border: 2px solid #00ffff;
-  border-radius: 10px;
-  margin-bottom: 1rem;
-}
-
-@media (max-width: 768px) {
-  section {
-    margin: 1rem;
-    padding: 1rem;
-  }
-
-  header {
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
+      background: url('imagem-cyberpunk.jpg') no-repeat center center fixed;
+      background-size: cover;
+      color: #e0e0e0;
+    }
+    header {
+      background: rgba(0, 0, 0, 0.8);
+      padding: 1rem;
+      position: fixed;
+      width: 100%;
+      top: 0;
+      z-index: 1000;
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+    }
+    header a {
+      color: #00d9ff;
+      text-decoration: none;
+      font-weight: bold;
+      text-transform: uppercase;
+    }
+    section {
+      max-width: 1000px;
+      margin: 6rem auto 2rem;
+      padding: 1rem;
+      background: rgba(0, 0, 0, 0.7);
+      border-radius: 8px;
+      box-shadow: 0 0 20px #00d9ff33;
+    }
+    h2 {
+      color: #00d9ff;
+      border-left: 4px solid #00d9ff;
+      padding-left: 0.5rem;
+    }
+    .personagem {
+      margin-bottom: 2rem;
+    }
+    .personagem img {
+      width: 100%;
+      max-width: 400px;
+      display: block;
+      border-radius: 8px;
+      margin-bottom: 0.5rem;
+    }
+    footer {
+      text-align: center;
+      padding: 2rem;
+      color: #888;
+      font-size: 0.9rem;
+    }
   </style>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
     <a href="#inicio">Início</a>
     <a href="#personagens">Personagens</a>
     <a href="#contato">Contato</a>
-  </header>  <section id="inicio">
-    <h1>Bem-vindo ao NeonCore</h1>
-    <p>Um RPG de mesa ambientado em um mundo cyberpunk sombrio, onde megacorporações dominam, implantes cibernéticos são comuns, e rebeldes lutam para sobreviver.</p>
-    <h2>Como Jogar</h2>
-    <p>Os jogadores criam personagens únicos e enfrentam missões em uma metrópole futurista. Usa-se dados para tomar decisões, interagir com o cenário e evoluir.</p>
-    <h2>Inspirações</h2>
-    <p>Inspirado em Cyberpunk 2077, Blade Runner, Akira e Ghost in the Shell. NeonCore traz uma visão original, brutal e envolvente do futuro.</p>
-    <h2>Sistema de Regras</h2>
-    <p>Baseado em atributos (Força, Agilidade, Técnica, Carisma e Inteligência), com perícias especializadas. Rola-se 1d10 + atributo contra uma dificuldade. Combate é tático e brutal.</p>
-    <h2>Criação de Personagens</h2>
-    <p>Escolha um arquétipo (Hacktivista, Mercenário, Cyborg, Informante, Infiltrador, Nômade) e distribua 20 pontos entre seus atributos. Defina uma motivação e personalize com equipamentos e ciberimplantes.</p>
-    <h2>Equipamento</h2>
-    <p>Armas tecnológicas, drones, armaduras cibernéticas, gadgets e implantes neurais. O arsenal define o estilo e estratégia do personagem.</p>
-    <h2>Cenário</h2>
-    <p>A megacidade NeonCore é dividida em zonas corporativas, guetos rebeldes e subníveis industriais. A corrupção está em todos os níveis, e alianças são frágeis.</p>
-  </section>  <section id="personagens">
-    <h1>Personagens</h1>
-    <div>
-      <h2>Raven</h2>
-      <img class="personagem" src="/mnt/data/file-8E7HjrUsqPNCukqZBS2sMV" alt="Raven">
-      <p>Mercenária solitária com um braço cibernético e passado misterioso. Especialista em combate urbano.</p><h2>Kairos</h2>
-  <img class="personagem" src="/mnt/data/file-8E7HjrUsqPNCukqZBS2sMV" alt="Kairos">
-  <p>Hacker brilhante que vive nas sombras da rede. Mestre em invasão de sistemas e manipulação de IA.</p>
+  </header>
 
-  <h2>Vera Syn</h2>
-  <img class="personagem" src="/mnt/data/file-8E7HjrUsqPNCukqZBS2sMV" alt="Vera Syn">
-  <p>Espiã de elite com implantes de camuflagem ótica. Conhecida por destruir megacorporações por dentro.</p>
+  <section id="inicio">
+    <h2>NeonCore – RPG Cyberpunk</h2>
+    <p>Em um futuro distorcido por corporações, implantes cibernéticos e vigilância constante, os jogadores interpretam personagens à margem da sociedade lutando por liberdade, justiça — ou apenas sobrevivência.</p>
 
-  <h2>Drax</h2>
-  <img class="personagem" src="/mnt/data/file-8E7HjrUsqPNCukqZBS2sMV" alt="Drax">
-  <p>Cyborg militar renegado. Sua força descomunal e armadura integrada fazem dele uma máquina de guerra.</p>
+    <h3>Sistema de Regras</h3>
+    <ul>
+      <li><strong>Dados Usados:</strong> Apenas 1d6</li>
+      <li><strong>Testes de Ação:</strong> 1–2: Fracasso, 3–4: Sucesso Parcial, 5–6: Sucesso Total</li>
+      <li><strong>Atributos:</strong> Corpo (força, combate), Mente (lógica, tecnologia), Presença (carisma, influência)</li>
+    </ul>
 
-  <h2>Nyx</h2>
-  <img class="personagem" src="/mnt/data/file-8E7HjrUsqPNCukqZBS2sMV" alt="Nyx">
-  <p>Artista e rebelde, mistura combate com arte. Seus drones capturam a realidade e a transformam em armas visuais.</p>
+    <h3>Criação de Personagem</h3>
+    <p>Escolha nome, profissão, aparência, motivação e um arquétipo:</p>
+    <ul>
+      <li>Mercenário</li>
+      <li>Hacker</li>
+      <li>Tecnomante</li>
+      <li>Espião</li>
+    </ul>
 
-  <h2>Sigma</h2>
-  <img class="personagem" src="/mnt/data/file-8E7HjrUsqPNCukqZBS2sMV" alt="Sigma">
-  <p>Ex-cientista corporativo. Usa nanotecnologia e ciência experimental para controlar o campo de batalha.</p>
-</div>
+    <h3>Equipamentos e Cibernéticos</h3>
+    <p>Cada personagem começa com 1 implante cibernético e itens como arma e comunicador.</p>
 
-  </section>  <section id="contato">
-    <h1>Contato</h1>
-    <p>Para saber mais sobre NeonCore ou obter o livro de regras completo, entre em contato: <strong>neoncore@rpgmail.com</strong></p>
+    <h3>Cenário: Neo-Tóquio, 2187</h3>
+    <p>Mega arranha-céus, luzes de néon, zonas de exclusão, e corporações como ZENNET e Takashi BioTek controlam o mundo.</p>
+
+    <h3>Inspirações</h3>
+    <p>Cyberpunk: Edgerunners, Blade Runner, Ghost in the Shell, Akira.</p>
+
+    <h3>Como Jogar</h3>
+    <p>Um jogador assume o papel de Narrador. Os outros interpretam personagens em missões, rolando dados sempre que houver risco ou incerteza.</p>
   </section>
+
+  <section id="personagens">
+    <h2>Personagens</h2>
+
+    <div class="personagem">
+      <img src="personagem1.jpg" alt="Zetta Vortex">
+      <h3>Zetta Vortex</h3>
+      <p>Especialista em infiltração e sabotagem. Implante óptico tático e lâminas de pulso retráteis.</p>
+    </div>
+
+    <div class="personagem">
+      <img src="personagem2.jpg" alt="Ryo Chrome">
+      <h3>Ryo Chrome</h3>
+      <p>Mercenário de rua com braço cibernético. Ex-membro das Forças Neotóquio. Usa uma pistola inteligente e pele resistente a balas.</p>
+    </div>
+
+    <div class="personagem">
+      <img src="personagem3.jpg" alt="Echo 7">
+      <h3>Echo 7</h3>
+      <p>Tecnomante capaz de interagir mentalmente com redes digitais. Cérebro aumentado com interface neural e drones de vigilância.</p>
+    </div>
+
+    <div class="personagem">
+      <img src="personagem4.jpg" alt="Kaori Sombra">
+      <h3>Kaori Sombra</h3>
+      <p>Espiã furtiva, mestre em disfarces. Implante de camuflagem óptica e habilidades de invasão social.</p>
+    </div>
+
+    <div class="personagem">
+      <img src="personagem5.jpg" alt="Jin Pulse">
+      <h3>Jin Pulse</h3>
+      <p>Hacker excêntrico. Implantes cranianos para hack instantâneo, com paixão por anarquia e memes criptografados.</p>
+    </div>
+
+    <div class="personagem">
+      <img src="personagem6.jpg" alt="Nyx Aether">
+      <h3>Nyx Aether</h3>
+      <p>Mensageira urbana com pernas biônicas, visão noturna e GPS cerebral. Atua como infiltradora e transportadora de dados sensíveis.</p>
+    </div>
+  </section>
+
+  <section id="contato">
+    <h2>Contato</h2>
+    <p>Quer jogar, narrar ou saber mais sobre o NeonCore? Envie um e-mail para: <strong>contato@neoncore.com</strong></p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 NeonCore RPG - Todos os direitos reservados</p>
+  </footer>
 </body>
 </html>
